# wch_iot_sdk

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Kconfig  README.rst  VERSION  env_setup.cmd  guiconfig.cmd  menconfig.cmd  reset.cmd  wch_iot_sdk.code-workspace
.eide/: debug.riscv.gcc.options.json  eide.json
arch/: CMakeLists.txt  Kconfig
arch/arm/: Kconfig
arch/riscv/: CMakeLists.txt  Kconfig  Kconfig.core  Kconfig.isa
arch/riscv/core/: CMakeLists.txt  core_pmp.c  fatal.c
arch/riscv/core/offsets/: offsets.c
arch/riscv/core/pmp/: core_pmp.c
arch/riscv/include/: core_pmp.h  kernel_arch_func.h
cmake/: compiler_flags_template.cmake  kernel.cmake  project.cmake
cmake/bintools/gnu/: target.cmake
cmake/compiler/: compiler_flags_template.cmake
cmake/compiler/gcc/: compiler_flags.cmake  generic.cmake  target.cmake
cmake/linker/ld/: generic.cmake  linker_flags.cmake  target.cmake  target_base.cmake
cmake/linker/ld/gcc/: linker_flags.cmake
cmake/modules/: arch.cmake  functions.cmake  generic_toolchain.cmake  kconfig.cmake  kernel.cmake  module.cmake  python.cmake  soc.cmake  target_toolchain.cmake  toolchain.cmake  version.cmake
cmake/share/: wchConfig.cmake  wch_export.cmake
cmake/toolchain/gcc_wch/: generic.cmake
doc/source/: conf.py  index.rst
doc/source/getting_started/: index.rst
drivers/: CMakeLists.txt  Kconfig  adc.c  uart.c
drivers/adc/: CMakeLists.txt  Kconfig  adc.c  adc_context.h
drivers/debug/: CMakeLists.txt  Kconfig  assert.c  print.c
drivers/eeprom/: CMakeLists.txt  eeprom.c
drivers/flash/: CMakeLists.txt  flash.c
drivers/gpio/: CMakeLists.txt  Kconfig  gpio.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  pinctrl.c
drivers/timer/: CMakeLists.txt  Kconfig  rtc_timer.c  sys_timer.c
drivers/uart/: CMakeLists.txt  Kconfig  Kconfig.ch57x  Kconfig.ch58x  uart.c
hal/: CMakeLists.txt  wch_errors.h
hal/ch57x/: CMakeLists.txt  ch57x_hal_adc.c  ch57x_hal_clk.c  ch57x_hal_flash.c  ch57x_hal_gpio.c  ch57x_hal_power.c  ch57x_hal_rtc.c  ch57x_hal_sys.c  ch57x_hal_systick.c  ch57x_hal_uart.c
hal/ch57x/inc/: ch57x_common.h  ch57x_hal_adc.h  ch57x_hal_clk.h  ch57x_hal_flash.h  ch57x_hal_gpio.h  ch57x_hal_pfic.h  ch57x_hal_power.h  ch57x_hal_rtc.h  ch57x_hal_sys.h  ch57x_hal_systick.h  ch57x_hal_uart.h
hal/ch58x/: CH58x_adc.c  CH58x_sys.c  CMakeLists.txt  ch58x_hal_adc.c  ch58x_hal_clk.c  ch58x_hal_flash.c  ch58x_hal_gpio.c  ch58x_hal_power.c  ch58x_hal_rtc.c  ch58x_hal_sys.c  ch58x_hal_uart.c
hal/ch58x/inc/: CH58x_common.h  ch58x_hal_adc.h  ch58x_hal_clk.h  ch58x_hal_flash.h  ch58x_hal_gpio.h  ch58x_hal_pfic.h  ch58x_hal_power.h  ch58x_hal_rtc.h  ch58x_hal_sys.h  ch58x_hal_uart.h
include/: common.h  device.h  device_extern.h  erron.h  init.h  irq.h  kernel.h  kernel_arch_interface.h  kernel_structs.h  sys_clock.h  timeout_q.h  toolchain.h
include/arch/: cpu.h
include/arch/common/: ffs.h
include/arch/riscv/: arch.h  exp.h
include/bluetooth/: bluetooth.h  conn.h  err_code.h  gatt.h
include/bluetooth/services/: dis.h  hrs.h  sps.h
include/buf/: buf.h
include/drivers/: adc.h  eeprom.h  flash.h  gpio.h  pinctrl.h  uart.h
include/drivers/timer/: system_timer.h
include/logging/: log.h
include/pm/: device.h  pm.h  policy.h  state.h
include/random/: rand32.h
include/sys/: __assert.h  atomic.h  byteorder.h  printk.h  time_units.h  util.h
include/toolchain/: common.h  gcc.h
kernel/: CMakeLists.txt  Kconfig  delay.c  device.c  fatal.c  init.c  timer.c  timout.c
kernel/include/: kernel_offsets.h
lib/: CMakeLists.txt
lib/ch57x/: CH57xBLE_LIB.h  CH57xBLE_ROM.h  CH57xBLE_ROM.hex  CH57xBLE_ROMx.hex  CMakeLists.txt
lib/ch58x/: CH58xBLE_ROM.hex  CH58xBLE_ROMx.hex  CMakeLists.txt
samples/basic/button/: CMakeLists.txt  prj.conf
samples/basic/button/src/: main.c
samples/bluetooth/: prj.conf
samples/bluetooth/peripheral/: CMakeLists.txt  prj.conf
samples/bluetooth/peripheral/src/: main.c  peripheral.c  peripheral.h
samples/bluetooth/peripheral_hr/: prj.conf
samples/bluetooth/peripheral_hr/src/: main.c  peripheral_hr.c  peripheral_hr.h
samples/bluetooth/src/: main.c  perip_process.c  perip_process.h
samples/drivers/adc/: CMakeLists.txt  prj.conf
samples/drivers/adc/src/: main.c
samples/drivers/timer_rtc/src/: main.c
samples/drivers/uart/: CMakeLists.txt  prj.conf
samples/drivers/uart/src/: .cproject  .project  main.c
samples/hello_world/: CMakeLists.txt
samples/hello_world/src/: main.c
samples/subsys/pm/: CMakeLists.txt
samples/subsys/pm/src/: main.c
script/: app.py  build.py  flash.py  kconfig.py  log.py  requirements.txt  version.py  wch_cmds.py
script/commands/: build.py  cmake.py  command.py  export.py  flash.py
script/kconfig/: kconfig.py
soc/: Kconfig
soc/ch57x/: Kconfig.soc  ch57x_defconfig  dev_cfg.c  dev_cfg.h  pin_cfg.c  pin_cfg.h  power.c  soc.c  soc.h  soc_irq.c  startup_CH573.S
soc/riscv/ch57x/: CMakeLists.txt  Kconfig.ch57x  Kconfig.series  Kconfig.soc  Link.ld  ch57x_defconfig  pin_cfg.h  power.c  soc.h
soc/riscv/ch58x/: CMakeLists.txt  Kconfig.ch58x  Kconfig.series  Kconfig.soc  Link.ld  ch58x_defconfig  dev_cfg.h  pin_cfg.c  power.c  soc.c  soc.h  startup_CH583.S
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/: CMakeLists.txt  Kconfig  Kconfig.adv  bt_init.c
subsys/bluetooth/hal/: CMakeLists.txt  config.h  hal.c  hal.h
subsys/bluetooth/host/: CMakeLists.txt  adv.c  att.c  gatt.c  process.c  smp.c  smp.h
subsys/bluetooth/services/: CMakeLists.txt  dis.c  hrs.c  sps.c
subsys/buf/: CMakeLists.txt  Kconfig  buf.c
subsys/logging/: CMakeLists.txt  Kconfig  assert.c  log.c
subsys/pm/: CMakeLists.txt  Kconfig  device.c  pm.c  policy.c
subsys/random/: CMakeLists.txt  rand32_timer.c
